# systems

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
linux/inotify/: CMakeLists.txt  README.md
linux/inotify/include/inotify_demo/: watcher.h
linux/inotify/src/: main.c  watcher.c
linux/inotify/tests/: test_watcher.c
profiling/getrusage/: CMakeLists.txt  README.md
profiling/getrusage/include/getrusage_demo/: usage.h
profiling/getrusage/src/: main.c  usage.c
profiling/getrusage/tests/: test_usage.c
profiling/mtrace/: CMakeLists.txt  README.md
profiling/mtrace/src/: main.c
